@@ -1,7 +1,7 @@
 #  File src/library/base/R/zapsmall.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2018 The R Core Team
+#  Copyright (C) 1995-2024 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,12 +16,15 @@
 #  A copy of the GNU General Public License is available at
 #  https://www.R-project.org/Licenses/
 
-zapsmall <- function(x, digits = getOption("digits"))
+
+zapsmall <- function(x, digits = getOption("digits"),
+                     mFUN = function(x, ina) max(abs(x[!ina])), min.d = 0L)
+    ## NB: keep in sync w/ implicit generic in ../../methods/R/makeBasicFunsList.R !
 {
     if (length(digits) == 0L)
         stop("invalid 'digits'")
     if (all(ina <- is.na(x)))
         return(x)
-    mx <- max(abs(x[!ina]))
-    round(x, digits = if(mx > 0) max(0L, digits - as.numeric(log10(mx))) else digits)
+    mx <- mFUN(x, ina)
+    round(x, digits = if(mx > 0) max(min.d, digits - as.numeric(log10(mx))) else digits)
 }
