@@ -1,7 +1,7 @@
 #  File src/library/methods/R/makeBasicFunsList.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2023 The R Core Team
+#  Copyright (C) 1995-2024 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -286,6 +286,17 @@ utils::globalVariables(".addBasicGeneric")
 	       useAsDefault= function(x, ...) base::svd(x, ...),
 	       signature = "x", where = where)
     setGenericImplicit("svd", where, FALSE)
+
+
+    ## zapsmall(): signature  only  "x"
+    setGeneric("zapsmall", function(x, digits = getOption("digits"),
+                                    mFUN = function(x, ina) max(abs(x[!ina])), min.d = 0L, ...)
+        standardGeneric("zapsmall"),
+        useAsDefault = function(x, digits = getOption("digits"),
+                                mFUN = function(x, ina) max(abs(x[!ina])), min.d = 0L, ...)
+            base::zapsmall(x, digits=digits, mFUN=mFUN, min.d=min.d), # swallow '...'
+        signature = "x", where = where)
+    setGenericImplicit("zapsmall", where, FALSE)
 
 
     ## not implicitGeneric() which is not yet available "here"
