@@ -260,6 +260,10 @@
 
       \item The default and \code{numeric} methods of \code{all.equal()}
       get a \code{check.class} option.
+
+      \item \code{zapsmall()} gets new optional arguments, function
+      \code{mFUN} and \code{min.d}, for extra flexibility; fulfills a wish
+      in \PR{18199}.  It also becomes implicit S4 generic in \pkg{methods}.
     }
   }
 
